--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^3.0.2",
     "parser": "^0.1.4",
     "pg": "^8.11.3",
-    "sequelize": "^6.35.1"
+    "sequelize": "^6.35.1",
+    "zod": "3.22.4"
   }
 }
